melhorando testes, arrumando excecoes e swagger